--- a/FakeSearchViewSample/app/src/main/res/menu/menu_main.xml
+++ b/FakeSearchViewSample/app/src/main/res/menu/menu_main.xml
@@ -6,6 +6,7 @@
   <item
     android:id="@+id/search_cars"
     android:title="@string/action_settings"
+    android:icon="@mipmap/search"
     app:showAsAction="ifRoom|collapseActionView"
     app:actionViewClass="com.gihub.leonardoxh.fakesearchview.FakeSearchView"/>
 
