--- a/FakeSearchView/app/src/main/res/layout/fake_search_view.xml
+++ b/FakeSearchView/app/src/main/res/layout/fake_search_view.xml
@@ -1,19 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  android:minWidth="240dp"
   android:layout_width="match_parent"
-  android:layout_height="wrap_content"
-  android:minWidth="240dp">
+  android:layout_height="wrap_content">
 
   <EditText
     android:id="@+id/wrapped_search"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:inputType="text"
+    android:paddingRight="42dp"
+    android:paddingEnd="42dp"
     android:imeOptions="actionSearch"/>
 
   <Button
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:id="@+id/clear"
+    android:layout_width="32dp"
+    android:layout_height="32dp"
+    android:layout_alignParentEnd="true"
+    android:layout_alignParentRight="true"
+    android:layout_marginEnd="8dp"
+    android:layout_marginRight="8dp"
     android:background="@mipmap/dark_clear"/>
 
 </RelativeLayout>
